# CMakeTestProject

./: CMakeLists.txt  LICENSE  README.md
generators/: printergen
lib/: CMakeLists.txt
lib/generators/: CMakeLists.txt
lib/src/: MyLibrary.cpp  MyLibrary.hpp
src/: main.cpp
